fix(breadcrumbs): update gap size in sl-popover container for better spacing

--- a/packages/components/breadcrumbs/src/breadcrumbs.scss
+++ b/packages/components/breadcrumbs/src/breadcrumbs.scss
@@ -120,7 +120,7 @@ sl-icon[name='breadcrumb-separator'] {
 sl-popover::part(container) {
   display: flex;
   flex-direction: column;
-  gap: var(--sl-space-new-2xs);
+  gap: var(--sl-size-025);
   padding: var(--sl-size-100) 0;
 }
 
